mise a jour debut des cards

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
             </div>
         </div>
         </section>
-        <section class="restaurants">
+        <section class="content">
             <h2>Restaurants</h2>
-            <div>
-                <div>
-                    image
-                    texte 
-                    coeur
+                <div class="restaurants-container">
+                    <div class="restaurant-cards">
+                    <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
+                    <p>La palette du goût</p>
+                    <i class="fa-light fa-heart"></i>
+                    </div>
+                
                 </div>
-                <div></div>
-            </div>
 
         </section>
     </main>
