--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
-    <link rel="stylesheet" href="style.scss">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/SCSS/style.scss">
+    <link rel="stylesheet" href="/CSS/style.css">
 
 </head>
 <body>
@@ -51,10 +51,19 @@
         <section class="content">
             <h2>Restaurants</h2>
                 <div class="restaurants-container">
-                    <div class="restaurant-cards">
-                    <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
-                    <p>La palette du goût</p>
-                    <i class="fa-light fa-heart"></i>
+                    <div class="restaurants-card">
+                        <a href="palettedugout.html">
+                          <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" loading="lazy" alt="Restaurant la palette du goût">
+                          <div class="restaurants-content">
+                            <div class="restaurants-content_text">
+                              <h2>La palette du goût</h2>
+                              <p>Ménilmontant</p>
+                            </div>
+                            <div class="restaurants-content_heart">
+                              <i class="far fa-heart" aria-hidden="true"></i>
+                            </div>
+                      </div>
+                        </a>
                     </div>
                 
                 </div>
