--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
-    <link rel="stylesheet" href="/SCSS/style.scss">
     <link rel="stylesheet" href="/CSS/style.css">
 
 </head>
@@ -58,6 +57,48 @@
                             <div class="restaurants-content_text">
                               <h2>La palette du goût</h2>
                               <p>Ménilmontant</p>
+                            </div>
+                            <div class="restaurants-content_heart">
+                              <i class="far fa-heart" aria-hidden="true"></i>
+                            </div>
+                      </div>
+                        </a>
+                    </div>
+                    <div class="restaurants-card new">
+                        <a href="lanoteenchantee.html">
+                          <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" loading="lazy" alt="Restaurant La note enchantée">
+                          <div class="restaurants-content">
+                            <div class="restaurants-content_text">
+                              <h2>La note enchantée</h2>
+                              <p>Charonne</p>
+                            </div>
+                            <div class="restaurants-content_heart">
+                              <i class="far fa-heart" aria-hidden="true"></i>
+                            </div>
+                      </div>
+                        </a>
+                    </div>
+                    <div class="restaurants-card">
+                        <a href="alafrancaise.html">
+                          <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" loading="lazy" alt="Restaurant a la francaise">
+                          <div class="restaurants-content">
+                            <div class="restaurants-content_text">
+                              <h2>A la francaise</h2>
+                              <p>Cité Rouge</p>
+                            </div>
+                            <div class="restaurants-content_heart">
+                              <i class="far fa-heart" aria-hidden="true"></i>
+                            </div>
+                      </div>
+                        </a>
+                    </div>
+                    <div class="restaurants-card">
+                        <a href="ledelice.html">
+                          <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" loading="lazy" alt="Restaurant la palette du goût">
+                          <div class="restaurants-content">
+                            <div class="restaurants-content_text">
+                              <h2>Le délice des sens</h2>
+                              <p>Folie-Méricourt</p>
                             </div>
                             <div class="restaurants-content_heart">
                               <i class="far fa-heart" aria-hidden="true"></i>
