--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <section class="content">
             <h2>Restaurants</h2>
                 <div class="restaurants-container">
+                  <div class="contain1">
                     <div class="restaurants-card">
                         <a href="palettedugout.html">
                           <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" loading="lazy" alt="Restaurant la palette du goût">
@@ -77,7 +78,9 @@
                             </div>
                       </div>
                         </a>
-                    </div>
+                  </div>
+                  </div>
+                  <div class="contain2">
                     <div class="restaurants-card">
                         <a href="alafrancaise.html">
                           <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" loading="lazy" alt="Restaurant a la francaise">
@@ -106,7 +109,7 @@
                       </div>
                         </a>
                     </div>
-                
+                  </div>
                 </div>
 
         </section>
