footer index ok

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             </div>
         </div>
         </section>
-        <section class="content">
+        <section class="menus">
             <h2>Restaurants</h2>
-                <div class="restaurants-container">
+                <div class="menus_cards">
                   <div class="contain1">
                     <div class="restaurants-card">
                         <a href="palettedugout.html">
@@ -113,7 +113,17 @@
                 </div>
 
         </section>
-    </main>
+      </main>
+        <section class="footer">
+          <footer class="footer_container">
+            <h3>Ohmyfood</h3>
+            <a href=""><i class="fas fa-utensils" aria-hidden="true"></i>Proposer un restaurant</a>
+            <a href=""><i class="fas fa-hands-helping" aria-hidden="true"></i>Devenir partenaire</a>
+            <a href="">Mentions légales</a>
+            <a href="mailto:">Contact</a>
+          </footer>
+        </section>
+    
    
 </body>
 </html>
