les html de 2 restaurants ok

--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@
         <section class="footer">
           <footer class="footer_container">
             <h3>Ohmyfood</h3>
-            <a href=""><i class="fas fa-utensils" aria-hidden="true"></i>Proposer un restaurant</a>
-            <a href=""><i class="fas fa-hands-helping" aria-hidden="true"></i>Devenir partenaire</a>
-            <a href="">Mentions légales</a>
-            <a href="mailto:">Contact</a>
+            <div class="href1">
+              <a href="ustensils"><i class="fas fa-utensils" aria-hidden="true"></i>Proposer un restaurant</a>
+              <a href="helping"><i class="fas fa-hands-helping" aria-hidden="true"></i>Devenir partenaire</a>
+            </div>
+            <div class="href2">
+              <a href="mentions">Mentions légales</a>
+              <a href="mailto:">Contact</a>
+            </div>
           </footer>
         </section>
-    
-   
 </body>
 </html>
