--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -5,29 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La palette du gout</title>
-    <link rel="stylesheet" href="/CSS/menus.css">
+    <title>A la francaise</title>
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
     <header>
         <h1>Ohmyfood</h1>
     </header>
-    <main class="palettedugout">
-        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette">
-      <div class="menu">
-        <h1>La palette du goût</h1>
-        <button class="menu__btn">
-            <i class="menu__like menu__like--noBg far fa-heart fa-2x"></i>
-            <i class="menu__like menu__like--bg fas fa-heart fa-2x"></i>
-        </button>
+    <main class="lanote">
+        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="palette">
+        <div class="menu-resto">
+            <h1>A la francaise</h1>
+            <i class="far fa-heart" aria-hidden="true"></i>
+          </div>
         <div class="titre">
             <div class="entrees">
                 <h2>ENTREES</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Fricassée d'escargot</h4></div>
+                            <h4>Tartare de poulpe acidulé</h4></div>
                         <div class="menu_text">
-                            <p>Au piment d'Espelette</p>
+                            <p>Aux zestes d'orange</p>
                         </div>
                         <div class="menu_price">
                             <p>25€</p>
@@ -35,9 +33,9 @@
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Foie gras de canard mi-cuit</h4></div>
+                            <h4>Velouté de légumes d'antan</h4></div>
                         <div class="menu_text">
-                            <p>Et ses copeaux de truffe noire</p>
+                            <p>Carotte, panais, topinambour</p>
                         </div>
                         <div class="menu_price">
                             <p>35€</p>
@@ -45,9 +43,9 @@
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Oeuf au plat</h4></div>
+                            <h4>Soupe à l'oignon</h4></div>
                         <div class="menu_text">
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <p>Revisitée</p>
                         </div>
                         <div class="menu_price">
                             <p>20€</p>
@@ -58,9 +56,9 @@
                 <h2>PLATS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Filet de boeuf aux herbes</h4></div>
+                            <h4>Coquilles Saint-Jacques</h4></div>
                         <div class="menu_text">
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <p>Accompagnées d'une purée de panais</p>
                         </div>
                         <div class="menu_price">
                             <p>40€</p>
@@ -68,9 +66,9 @@
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Parmentier de queue de boeuf</h4></div>
+                        <h4>Magret de canard</h4></div>
                     <div class="menu_text">
-                        <p>À la truffe noire sur sa purée de panais</p>
+                        <p>Et parmentier de pommes de terre</p>
                     </div>
                     <div class="menu_price">
                         <p>35€</p>
@@ -78,9 +76,9 @@
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Filet de turbot</h4></div>
+                        <h4>Pigeonneau d’Ille-et-Vilaine</h4></div>
                     <div class="menu_text">
-                        <p>Aux agrumes</p>
+                        <p>Sur son lit de gnocchis aux légumes</p>
                     </div>
                     <div class="menu_price">
                         <p>44€</p>
@@ -91,18 +89,18 @@
                 <h2>DESSERTS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Paris-Brest</h4></div>
-                    <div class="menu_text">
-                        <p>Revisité</p>
-                    </div>
-                    <div class="menu_price">
-                        <p>18€</p>
+                            <h4>Pétales de violettes glacés</h4></div>
+                        <div class="menu_text">
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div class="menu_price">
+                            <p>18€</p>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Macaron au chocolat d'exception</h4></div>
+                            <h4>Fondant au chocolat</h4></div>
                         <div class="menu_text">
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <p>Revisité</p>
                         </div>
                         <div class="menu_price">
                             <p>22€</p>
@@ -110,9 +108,9 @@
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Mousse au chocolat</h4></div>
+                            <h4>Millefeuille croustillant</h4></div>
                         <div class="menu_text">
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <p>Myrtilles et pâte d’amande</p>
                         </div>
                         <div class="menu_price">
                             <p>23€</p>
@@ -121,7 +119,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </main>
     <section class="footer">
         <footer class="footer_container">
