--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
-    <link rel=./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpgheet" href="/CSS/style.css">
-
+    <link rel="stylesheet" href="/CSS/style.css">  
 </head>
 <body>
     <header>
