--- a/ledelice.html
+++ b/ledelice.html
@@ -5,29 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La palette du gout</title>
-    <link rel="stylesheet" href="/CSS/menus.css">
+    <title>Le delice des sens</title>
+    <link rel="stylesheet" href="/CSS/style.css">  
 </head>
 <body>
     <header>
         <h1>Ohmyfood</h1>
     </header>
-    <main class="palettedugout">
-        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette">
-      <div class="menu">
-        <h1>La palette du goût</h1>
-        <button class="menu__btn">
-            <i class="menu__like menu__like--noBg far fa-heart fa-2x"></i>
-            <i class="menu__like menu__like--bg fas fa-heart fa-2x"></i>
-        </button>
+    <main class="lanote">
+        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="palette">
+        <div class="menu-resto">
+            <h1>Le délice des sens</h1>
+            <i class="far fa-heart" aria-hidden="true"></i>
+          </div>
         <div class="titre">
             <div class="entrees">
                 <h2>ENTREES</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Fricassée d'escargot</h4></div>
+                            <h4>Tartare de thon</h4></div>
                         <div class="menu_text">
-                            <p>Au piment d'Espelette</p>
+                            <p>Assaisonné au yuzu</p>
                         </div>
                         <div class="menu_price">
                             <p>25€</p>
@@ -35,9 +33,9 @@
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Foie gras de canard mi-cuit</h4></div>
+                            <h4>Bouchée de homard croustillant</h4></div>
                         <div class="menu_text">
-                            <p>Et ses copeaux de truffe noire</p>
+                            <p>Et sa farandole de petits légumes</p>
                         </div>
                         <div class="menu_price">
                             <p>35€</p>
@@ -45,9 +43,9 @@
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Oeuf au plat</h4></div>
+                            <h4>Velouté de cèpes</h4></div>
                         <div class="menu_text">
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <p>Aux truffes</p>
                         </div>
                         <div class="menu_price">
                             <p>20€</p>
@@ -58,9 +56,9 @@
                 <h2>PLATS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Filet de boeuf aux herbes</h4></div>
+                            <h4>Poulet rôti aux herbes de Provence</h4></div>
                         <div class="menu_text">
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <p>Et sa crème de truffe</p>
                         </div>
                         <div class="menu_price">
                             <p>40€</p>
@@ -68,9 +66,9 @@
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Parmentier de queue de boeuf</h4></div>
+                        <h4>Langouste rôtie</h4></div>
                     <div class="menu_text">
-                        <p>À la truffe noire sur sa purée de panais</p>
+                        <p>Et ses légumes de saison</p>
                     </div>
                     <div class="menu_price">
                         <p>35€</p>
@@ -78,9 +76,9 @@
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Filet de turbot</h4></div>
+                        <h4>Côte de boeuf Angus</h4></div>
                     <div class="menu_text">
-                        <p>Aux agrumes</p>
+                        <p>Et sa purée de panais</p>
                     </div>
                     <div class="menu_price">
                         <p>44€</p>
@@ -91,18 +89,18 @@
                 <h2>DESSERTS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Paris-Brest</h4></div>
-                    <div class="menu_text">
-                        <p>Revisité</p>
-                    </div>
-                    <div class="menu_price">
-                        <p>18€</p>
+                            <h4>Farandole de desserts</h4></div>
+                        <div class="menu_text">
+                            <p>Du chef</p>
+                        </div>
+                        <div class="menu_price">
+                            <p>18€</p>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Macaron au chocolat d'exception</h4></div>
+                            <h4>Crème brulée</h4></div>
                         <div class="menu_text">
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <p>Revisitée</p>
                         </div>
                         <div class="menu_price">
                             <p>22€</p>
@@ -110,9 +108,9 @@
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Mousse au chocolat</h4></div>
+                            <h4>Tiramisu</h4></div>
                         <div class="menu_text">
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <p>À la noisette</p>
                         </div>
                         <div class="menu_price">
                             <p>23€</p>
@@ -121,7 +119,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </main>
     <section class="footer">
         <footer class="footer_container">
