--- a/palettedugout.html
+++ b/palettedugout.html
@@ -25,32 +25,38 @@
                 <h2>ENTREES</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Fricassée d'escargot</h4></div>
-                        <div class="menu_text">
+                            <h4>Fricassée d'escargot</h4>
                             <p>Au piment d'Espelette</p>
                         </div>
                         <div class="menu_price">
                             <p>25€</p>
                         </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
+                        </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Foie gras de canard mi-cuit</h4></div>
-                        <div class="menu_text">
+                            <h4>Foie gras de canard mi-cuit</h4>
                             <p>Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="menu_price">
                             <p>35€</p>
                         </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
+                        </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Oeuf au plat</h4></div>
-                        <div class="menu_text">
+                            <h4>Oeuf au plat</h4>
                             <p>Assaisonné à la truffe sur lit de caviar</p>
-                        </div>
+                    </div>
                         <div class="menu_price">
                             <p>20€</p>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
             </div>
@@ -58,32 +64,38 @@
                 <h2>PLATS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Filet de boeuf aux herbes</h4></div>
-                        <div class="menu_text">
+                            <h4>Filet de boeuf aux herbes</h4>
                             <p>Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="menu_price">
                             <p>40€</p>
                         </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
+                        </div>
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Parmentier de queue de boeuf</h4></div>
-                    <div class="menu_text">
+                        <h4>Parmentier de queue de boeuf</h4>
                         <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <div class="menu_price">
                         <p>35€</p>
                     </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
+                    </div>
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Filet de turbot</h4></div>
-                    <div class="menu_text">
+                        <h4>Filet de turbot</h4>
                         <p>Aux agrumes</p>
                     </div>
                     <div class="menu_price">
                         <p>44€</p>
+                    </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
                     </div>
                 </div>
             </div>
@@ -91,37 +103,44 @@
                 <h2>DESSERTS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Paris-Brest</h4></div>
-                    <div class="menu_text">
-                        <p>Revisité</p>
-                    </div>
-                    <div class="menu_price">
-                        <p>18€</p>
+                            <h4>Paris-Brest</h4>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="menu_price">
+                            <p>18€</p>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
+                        </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Macaron au chocolat d'exception</h4></div>
-                        <div class="menu_text">
+                            <h4>Macaron au chocolat d'exception</h4>
                             <p>Et glace à la vanille de Madagascar</p>
                         </div>
                         <div class="menu_price">
                             <p>22€</p>
                         </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
+                        </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Mousse au chocolat</h4></div>
-                        <div class="menu_text">
+                            <h4>Mousse au chocolat</h4>
                             <p>Au piment d'Espelette et à la truffe noire</p>
                         </div>
                         <div class="menu_price">
                             <p>23€</p>
                         </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
+                        </div>
                     </div>
-                </div>
             </div>
         </div>
-    </div>
+        </div>
+        <button class="btn">Commander</button>
     </main>
     <section class="footer">
         <footer class="footer_container">
