--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                               <h2>La palette du goût</h2>
                               <p>Ménilmontant</p>
                             </div>
-                            <div class="restaurants-content_heart">
-                              <i class="far fa-heart" aria-hidden="true"></i>
+                            <div class="heart">
+                              <i class="far fa-heart"></i>
+                              <i class="fas fa-heart"></i>
                             </div>
                       </div>
                         </a>
@@ -73,8 +74,9 @@
                               <h2>La note enchantée</h2>
                               <p>Charonne</p>
                             </div>
-                            <div class="restaurants-content_heart">
-                              <i class="far fa-heart" aria-hidden="true"></i>
+                            <div class="heart">
+                              <i class="far fa-heart"></i>
+                              <i class="fas fa-heart"></i>
                             </div>
                       </div>
                         </a>
@@ -89,8 +91,9 @@
                               <h2>A la francaise</h2>
                               <p>Cité Rouge</p>
                             </div>
-                            <div class="restaurants-content_heart">
-                              <i class="far fa-heart" aria-hidden="true"></i>
+                            <div class="heart">
+                              <i class="far fa-heart"></i>
+                              <i class="fas fa-heart"></i>
                             </div>
                       </div>
                         </a>
@@ -103,8 +106,9 @@
                               <h2>Le délice des sens</h2>
                               <p>Folie-Méricourt</p>
                             </div>
-                            <div class="restaurants-content_heart">
-                              <i class="far fa-heart" aria-hidden="true"></i>
+                            <div class="heart">
+                              <i class="far fa-heart"></i>
+                              <i class="fas fa-heart"></i>
                             </div>
                       </div>
                         </a>
