--- a/palettedugout.html
+++ b/palettedugout.html
@@ -10,16 +10,19 @@
 </head>
 <body>
     <header>
+        <button class="arrow">
+        <i class="fa-solid fa-arrow-left-long"></i>
+        <a href="index.html"></a></button>
         <h1>Ohmyfood</h1>
     </header>
     <main class="palettedugout">
         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette">
       <div class="menu">
         <h1>La palette du goût</h1>
-        <button class="menu__btn">
-            <i class="menu__like menu__like--noBg far fa-heart fa-2x"></i>
-            <i class="menu__like menu__like--bg fas fa-heart fa-2x"></i>
-        </button>
+        <div class="heart">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-heart"></i>
+        </div>
         <div class="titre">
             <div class="entrees">
                 <h2>ENTREES</h2>
