ok avant animations et mediaqueries

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -6,59 +6,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
-    <link rel="stylesheet" href="/CSS/style.css">  
+    <link rel="stylesheet" href="./CSS/menus.css">  
 </head>
 <body>
     <header>
         <h1>Ohmyfood</h1>
     </header>
-    <main class="lanote">
+    <main class="main">
         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="palette">
-        <div class="menu-resto">
+        <div class="menu">
             <h1>La note enchantée</h1>
-            <i class="far fa-heart" aria-hidden="true"></i>
-          </div>
+            <div class="heart">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-heart"></i>
+        </div>
         <div class="titre">
             <div class="entrees">
                 <h2>ENTREES</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Ravioles de foie gras</h4></div>
-                        <div class="menu_text">
+                            <h4>Ravioles de foie gras</h4>
                             <p>Accompagnés de leur crème à la truffe</p>
                         </div>
                         <div class="menu_price">
-                            <p>25€</p>
+                            <h5>25€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Caviar osciètre</h4></div>
-                        <div class="menu_text">
+                            <h4>Caviar osciètre</h4>
                             <p>Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="menu_price">
-                            <p>35€</p>
+                            <h5>35€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Homard et espuma de potiron</h4></div>
-                        <div class="menu_text">
+                            <h4>Homard et espuma de potiron</h4>
                             <p>Mariné aux zestes d'orange</p>
                         </div>
                         <div class="menu_price">
-                            <p>20€</p>
+                            <h5>20€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Foie gras de canard cuit entier</h4></div>
-                        <div class="menu_text">
+                            <h4>Foie gras de canard cuit entier</h4>
                             <p>Confiture de figue et pain toasté</p>
                         </div>
                         <div class="menu_price">
-                            <p>35€</p>
+                            <h5>35€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
             </div>
@@ -66,32 +76,38 @@
                 <h2>PLATS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Noix de coquilles Saint-Jacques</h4></div>
-                        <div class="menu_text">
+                            <h4>Noix de coquilles Saint-Jacques</h4>
                             <p>Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="menu_price">
-                            <p>40€</p>
+                            <h5>40€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Langoustine poêlée</h4></div>
-                    <div class="menu_text">
+                        <h4>Langoustine poêlée</h4>
                         <p>Purée de patate douce</p>
                     </div>
                     <div class="menu_price">
-                        <p>35€</p>
+                        <h5>35€<h5>
+                    </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
                     </div>
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Mijoté de queue de boeuf</h4></div>
-                    <div class="menu_text">
+                        <h4>Mijoté de queue de boeuf</h4>
                         <p>Et riz sauvage aux zestes de citron</p>
                     </div>
                     <div class="menu_price">
-                        <p>44€</p>
+                        <h5>44€<h5>
+                    </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
                     </div>
                 </div>
             </div>
@@ -104,31 +120,40 @@
                             <p>Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="menu_price">
-                            <p>18€</p>
+                            <h5>18€<h5>>
+                    </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
+                    </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Baba au rhum revisité</h4></div>
-                        <div class="menu_text">
+                            <h4>Baba au rhum revisité</h4>
                             <p>Avec son coulis de citron</p>
                         </div>
                         <div class="menu_price">
-                            <p>22€</p>
+                            <h5>18€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Tarte au citron meringuée</h4></div>
-                        <div class="menu_text">
+                            <h4>Tarte au citron meringuée</h4>
                             <p>Déstructurée</p>
                         </div>
                         <div class="menu_price">
-                            <p>23€</p>
+                            <h5>23€</h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <button class="btn">Commander</button>
     </main>
     <section class="footer">
         <footer class="footer_container">
