--- a/ledelice.html
+++ b/ledelice.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le delice des sens</title>
-    <link rel="stylesheet" href="/CSS/style.css">  
+    <link rel="stylesheet" href="./CSS/menus.css">  
 </head>
 <body>
     <header>
@@ -14,41 +14,49 @@
     </header>
     <main class="lanote">
         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="palette">
-        <div class="menu-resto">
+        <div class="menu">
             <h1>Le délice des sens</h1>
-            <i class="far fa-heart" aria-hidden="true"></i>
-          </div>
+            <div class="heart">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-heart"></i>
+        </div>
         <div class="titre">
             <div class="entrees">
                 <h2>ENTREES</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Tartare de thon</h4></div>
-                        <div class="menu_text">
+                            <h4>Tartare de thon</h4>
                             <p>Assaisonné au yuzu</p>
                         </div>
                         <div class="menu_price">
-                            <p>25€</p>
+                            <h5>25€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Bouchée de homard croustillant</h4></div>
-                        <div class="menu_text">
+                            <h4>Bouchée de homard croustillant</h4>
                             <p>Et sa farandole de petits légumes</p>
                         </div>
                         <div class="menu_price">
-                            <p>35€</p>
+                            <h5>35€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Velouté de cèpes</h4></div>
-                        <div class="menu_text">
+                            <h4>Velouté de cèpes</h4>
                             <p>Aux truffes</p>
                         </div>
                         <div class="menu_price">
-                            <p>20€</p>
+                            <h5>20€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
             </div>
@@ -56,32 +64,38 @@
                 <h2>PLATS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Poulet rôti aux herbes de Provence</h4></div>
-                        <div class="menu_text">
+                            <h4>Poulet rôti aux herbes de Provence</h4>
                             <p>Et sa crème de truffe</p>
                         </div>
                         <div class="menu_price">
-                            <p>40€</p>
+                            <h5>45€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Langouste rôtie</h4></div>
-                    <div class="menu_text">
+                        <h4>Langouste rôtie</h4>
                         <p>Et ses légumes de saison</p>
                     </div>
                     <div class="menu_price">
-                        <p>35€</p>
+                        <h5>35€<h5>
+                    </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
                     </div>
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Côte de boeuf Angus</h4></div>
-                    <div class="menu_text">
+                        <h4>Côte de boeuf Angus</h4>
                         <p>Et sa purée de panais</p>
                     </div>
                     <div class="menu_price">
-                        <p>44€</p>
+                        <h5>44€<h5>
+                    </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
                     </div>
                 </div>
             </div>
@@ -89,36 +103,44 @@
                 <h2>DESSERTS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Farandole de desserts</h4></div>
-                        <div class="menu_text">
+                            <h4>Farandole de desserts</h4>
                             <p>Du chef</p>
                         </div>
                         <div class="menu_price">
-                            <p>18€</p>
+                            <h5>18€<h5>
+                    </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
+                    </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Crème brulée</h4></div>
-                        <div class="menu_text">
+                            <h4>Crème brulée</h4>
                             <p>Revisitée</p>
                         </div>
                         <div class="menu_price">
-                            <p>22€</p>
+                            <h5>22€<h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Tiramisu</h4></div>
-                        <div class="menu_text">
+                            <h4>Tiramisu</h4>
                             <p>À la noisette</p>
                         </div>
                         <div class="menu_price">
-                            <p>23€</p>
+                            <h5>23€</h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <button class="btn">Commander</button>
     </main>
     <section class="footer">
         <footer class="footer_container">
