--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -6,49 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A la francaise</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="./CSS/menus.css">
 </head>
 <body>
     <header>
         <h1>Ohmyfood</h1>
     </header>
-    <main class="lanote">
+    <main class="main">
         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="palette">
-        <div class="menu-resto">
+        <div class="menu">
             <h1>A la francaise</h1>
-            <i class="far fa-heart" aria-hidden="true"></i>
-          </div>
+            <div class="heart">
+                <i class="far fa-heart"></i>
+                <i class="fas fa-heart"></i>
+        </div>
         <div class="titre">
             <div class="entrees">
                 <h2>ENTREES</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Tartare de poulpe acidulé</h4></div>
-                        <div class="menu_text">
+                            <h4>Tartare de poulpe acidulé</h4>
                             <p>Aux zestes d'orange</p>
                         </div>
                         <div class="menu_price">
-                            <p>25€</p>
+                            <h5>25€</h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Velouté de légumes d'antan</h4></div>
-                        <div class="menu_text">
+                            <h4>Velouté de légumes d'antan</h4>
                             <p>Carotte, panais, topinambour</p>
                         </div>
                         <div class="menu_price">
-                            <p>35€</p>
+                            <h5>35€</h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Soupe à l'oignon</h4></div>
-                        <div class="menu_text">
+                            <h4>Soupe à l'oignon</h4>
                             <p>Revisitée</p>
                         </div>
                         <div class="menu_price">
-                            <p>20€</p>
+                            <h5>20€</h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
             </div>
@@ -56,32 +64,38 @@
                 <h2>PLATS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Coquilles Saint-Jacques</h4></div>
-                        <div class="menu_text">
+                            <h4>Coquilles Saint-Jacques</h4>
                             <p>Accompagnées d'une purée de panais</p>
                         </div>
                         <div class="menu_price">
-                            <p>40€</p>
+                            <h5>40€</h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Magret de canard</h4></div>
-                    <div class="menu_text">
+                        <h4>Magret de canard</h4>
                         <p>Et parmentier de pommes de terre</p>
                     </div>
                     <div class="menu_price">
-                        <p>35€</p>
+                        <h5>35€</h5>
+                    </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
                     </div>
                 </div>
                 <div class="menu_carte">
                     <div class="menu_titre">
-                        <h4>Pigeonneau d’Ille-et-Vilaine</h4></div>
-                    <div class="menu_text">
+                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                         <p>Sur son lit de gnocchis aux légumes</p>
                     </div>
                     <div class="menu_price">
-                        <p>44€</p>
+                        <h5>44€</h5>
+                    </div>
+                    <div class="box">
+                        <span class="check far fa-check-circle" aria-hidden="true"></span>
                     </div>
                 </div>
             </div>
@@ -89,36 +103,43 @@
                 <h2>DESSERTS</h2>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Pétales de violettes glacés</h4></div>
-                        <div class="menu_text">
+                            <h4>Pétales de violettes glacés</h4>
                             <p>Et purée de noisettes</p>
                         </div>
                         <div class="menu_price">
-                            <p>18€</p>
+                            <h5>18€</h5></div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
+                        </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Fondant au chocolat</h4></div>
-                        <div class="menu_text">
+                            <h4>Fondant au chocolat</h4>
                             <p>Revisité</p>
                         </div>
                         <div class="menu_price">
-                            <p>22€</p>
+                            <h5>22€</h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Millefeuille croustillant</h4></div>
-                        <div class="menu_text">
+                            <h4>Millefeuille croustillant</h4>
                             <p>Myrtilles et pâte d’amande</p>
                         </div>
                         <div class="menu_price">
-                            <p>23€</p>
+                            <h5>23€</h5>
+                        </div>
+                        <div class="box">
+                            <span class="check far fa-check-circle" aria-hidden="true"></span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <button class="btn">Commander</button>
     </main>
     <section class="footer">
         <footer class="footer_container">
