--- a/palettedugout.html
+++ b/palettedugout.html
@@ -15,7 +15,7 @@
         <a href="index.html"></a></button>
         <h1>Ohmyfood</h1>
     </header>
-    <main class="palettedugout">
+    <main class="main">
         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette">
       <div class="menu">
         <h1>La palette du goût</h1>
@@ -32,7 +32,7 @@
                             <p>Au piment d'Espelette</p>
                         </div>
                         <div class="menu_price">
-                            <p>25€</p>
+                            <h5>25€<h5>
                         </div>
                         <div class="box">
                             <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -44,7 +44,7 @@
                             <p>Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="menu_price">
-                            <p>35€</p>
+                            <h5>35€</h5>
                         </div>
                         <div class="box">
                             <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -56,7 +56,7 @@
                             <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                         <div class="menu_price">
-                            <p>20€</p>
+                            <h5>20€</h5>
                         </div>
                         <div class="box">
                             <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -71,7 +71,7 @@
                             <p>Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="menu_price">
-                            <p>40€</p>
+                            <h5>40€</h5>
                         </div>
                         <div class="box">
                             <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -83,7 +83,7 @@
                         <p>À la truffe noire sur sa purée de panais</p>
                     </div>
                     <div class="menu_price">
-                        <p>35€</p>
+                        <h5>35€</h5>
                     </div>
                     <div class="box">
                         <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -95,7 +95,7 @@
                         <p>Aux agrumes</p>
                     </div>
                     <div class="menu_price">
-                        <p>44€</p>
+                        <h5>44€</h5>
                     </div>
                     <div class="box">
                         <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -110,7 +110,7 @@
                             <p>Revisité</p>
                         </div>
                         <div class="menu_price">
-                            <p>18€</p>
+                            <h5>18€</h5>
                         </div>
                         <div class="box">
                             <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -122,7 +122,7 @@
                             <p>Et glace à la vanille de Madagascar</p>
                         </div>
                         <div class="menu_price">
-                            <p>22€</p>
+                            <h5>22€</h5>
                         </div>
                         <div class="box">
                             <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -134,7 +134,7 @@
                             <p>Au piment d'Espelette et à la truffe noire</p>
                         </div>
                         <div class="menu_price">
-                            <p>23€</p>
+                            <h5>23€</h5>
                         </div>
                         <div class="box">
                             <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -146,17 +146,17 @@
         <button class="btn">Commander</button>
     </main>
     <section class="footer">
-        <footer class="footer_container">
-          <h3>Ohmyfood</h3>
-          <div class="href1">
-            <a href="ustensils"><i class="fas fa-utensils" aria-hidden="true"></i>Proposer un restaurant</a>
-            <a href="helping"><i class="fas fa-hands-helping" aria-hidden="true"></i>Devenir partenaire</a>
-          </div>
-          <div class="href2">
-            <a href="mentions">Mentions légales</a>
-            <a href="mailto:">Contact</a>
-          </div>
-        </footer>
+            <footer class="footer_container">
+              <h3>Ohmyfood</h3>
+              <div class="href1">
+                <a href="ustensils"><i class="fas fa-utensils" aria-hidden="true"></i>Proposer un restaurant</a>
+                <a href="helping"><i class="fas fa-hands-helping" aria-hidden="true"></i>Devenir partenaire</a>
+              </div>
+              <div class="href2">
+                <a href="mentions">Mentions légales</a>
+                <a href="mailto:">Contact</a>
+              </div>
+            </footer>
       </section>
 </body>
 </html>
