responsive et debut animations

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <header>
+        <div class="arrow">
+            <i class="fa-solid fa-arrow-left-long"></i>
+            <a href="index.html"></a></div>
         <h1>Ohmyfood</h1>
     </header>
     <main class="main">
@@ -22,7 +25,9 @@
         </div>
         <div class="titre">
             <div class="entrees">
-                <h2>ENTREES</h2>
+                <div class="title">
+                    <h2 class="title-underline">ENTREES</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Tartare de poulpe acidulé</h4>
@@ -61,7 +66,9 @@
                     </div>
             </div>
             <div class="plats">
-                <h2>PLATS</h2>
+                <div class="title">
+                    <h2 class="title-underline">PLATS</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Coquilles Saint-Jacques</h4>
@@ -100,7 +107,9 @@
                 </div>
             </div>
             <div class="desserts">
-                <h2>DESSERTS</h2>
+                <div class="title">
+                    <h2 class="title-underline">DESSERTS</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Pétales de violettes glacés</h4>
@@ -141,6 +150,7 @@
         </div>
         <button class="btn">Commander</button>
     </main>
+    
     <section class="footer">
         <footer class="footer_container">
           <h3>Ohmyfood</h3>
