--- a/ledelice.html
+++ b/ledelice.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./CSS/menus.css">  
 </head>
 <body>
-    <header>
+    <header><div class="arrow">
+        <i class="fa-solid fa-arrow-left-long"></i>
+        <a href="index.html"></a></div>
         <h1>Ohmyfood</h1>
     </header>
     <main class="lanote">
@@ -22,7 +24,9 @@
         </div>
         <div class="titre">
             <div class="entrees">
-                <h2>ENTREES</h2>
+                <div class="title">
+                    <h2 class="title-underline">ENTREES</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Tartare de thon</h4>
@@ -61,7 +65,9 @@
                     </div>
             </div>
             <div class="plats">
-                <h2>PLATS</h2>
+                <div class="title">
+                    <h2 class="title-underline">PLATS</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Poulet rôti aux herbes de Provence</h4>
@@ -100,7 +106,9 @@
                 </div>
             </div>
             <div class="desserts">
-                <h2>DESSERTS</h2>
+                <div class="title">
+                    <h2 class="title-underline">DESSERTS</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Farandole de desserts</h4>
