--- a/palettedugout.html
+++ b/palettedugout.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <button class="arrow">
+        <div class="arrow">
         <i class="fa-solid fa-arrow-left-long"></i>
-        <a href="index.html"></a></button>
+        <a href="index.html"></a></div>
         <h1>Ohmyfood</h1>
     </header>
     <main class="main">
@@ -25,7 +25,9 @@
         </div>
         <div class="titre">
             <div class="entrees">
-                <h2>ENTREES</h2>
+                <div class="title">
+                <h2 class="title-underline">ENTREES</h2>
+                </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Fricassée d'escargot</h4>
@@ -64,7 +66,9 @@
                     </div>
             </div>
             <div class="plats">
-                <h2>PLATS</h2>
+                <div class="title">
+                <h2 class="title-underline">PLATS</h2>
+                </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Filet de boeuf aux herbes</h4>
@@ -103,7 +107,9 @@
                 </div>
             </div>
             <div class="desserts">
-                <h2>DESSERTS</h2>
+                <div class="title">
+                    <h2 class="title-underline">DESSERTS</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Paris-Brest</h4>
