--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oh My Food</title>
+    <title>la note enchantée</title>
     <link rel="stylesheet" href="./CSS/menus.css">  
-</head>
+</head> 
 <body>
     <header>
+        <div class="arrow">
+            <i class="fa-solid fa-arrow-left-long"></i>
+            <a href="index.html"></a></div>
         <h1>Ohmyfood</h1>
     </header>
     <main class="main">
@@ -22,7 +25,9 @@
         </div>
         <div class="titre">
             <div class="entrees">
-                <h2>ENTREES</h2>
+                <div class="title">
+                    <h2 class="title-underline">ENTREES</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Ravioles de foie gras</h4>
@@ -73,7 +78,9 @@
                     </div>
             </div>
             <div class="plats">
-                <h2>PLATS</h2>
+                <div class="title">
+                    <h2 class="title-underline">PLATS</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
                             <h4>Noix de coquilles Saint-Jacques</h4>
@@ -112,15 +119,16 @@
                 </div>
             </div>
             <div class="desserts">
-                <h2>DESSERTS</h2>
+                <div class="title">
+                    <h2 class="title-underline">DESSERTS</h2>
+                    </div>
                     <div class="menu_carte">
                         <div class="menu_titre">
-                            <h4>Macaron noisette et chocolat</h4></div>
-                        <div class="menu_text">
+                            <h4>Macaron noisette et chocolat</h4>
                             <p>Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="menu_price">
-                            <h5>18€<h5>>
+                            <h5>18€<h5>
                     </div>
                     <div class="box">
                         <span class="check far fa-check-circle" aria-hidden="true"></span>
@@ -152,9 +160,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
         <button class="btn">Commander</button>
     </main>
+
     <section class="footer">
         <footer class="footer_container">
           <h3>Ohmyfood</h3>
