responsive mobile ok

--- a/index.html
+++ b/index.html
@@ -122,12 +122,16 @@
           <footer class="footer_container">
             <h3>Ohmyfood</h3>
             <div class="href1">
-              <a href="ustensils"><i class="fas fa-utensils" aria-hidden="true"></i>Proposer un restaurant</a>
-              <a href="helping"><i class="fas fa-hands-helping" aria-hidden="true"></i>Devenir partenaire</a>
+              <a class="ustensils" href="ustensils">
+                <i class="fas fa-utensils" aria-hidden="true">
+                </i>Proposer un restaurant</a>
+              <a class="help" href="helping">
+                <i class="fas fa-hands-helping" aria-hidden="true">
+                </i>Devenir partenaire</a>
             </div>
             <div class="href2">
-              <a href="mentions">Mentions légales</a>
-              <a href="mailto:">Contact</a>
+              <a class="mentions" href="mentions">Mentions légales</a>
+              <a class="mail" href="mailto:">Contact</a>
             </div>
           </footer>
         </section>
