--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -10,9 +10,10 @@
 </head> 
 <body>
     <header>
-        <div class="arrow">
+        <div class="arrow" onclick="document.location.href='index.html'">
             <i class="fa-solid fa-arrow-left-long"></i>
-            <a href="index.html"></a></div>
+            <a href="index.html"></a>
+            </div>
         <h1>Ohmyfood</h1>
     </header>
     <main class="main">
