--- a/ledelice.html
+++ b/ledelice.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="./CSS/menus.css">  
 </head>
 <body>
-    <header><div class="arrow">
-        <i class="fa-solid fa-arrow-left-long"></i>
-        <a href="index.html"></a></div>
+    <header>
+        <div class="arrow" onclick="document.location.href='index.html'">
+            <i class="fa-solid fa-arrow-left-long"></i>
+            <a href="index.html"></a>
+            </div>
         <h1>Ohmyfood</h1>
     </header>
     <main class="lanote">
