--- a/palettedugout.html
+++ b/palettedugout.html
@@ -22,7 +22,6 @@
         <h1>La palette du goût</h1>
         <div class="heart">
                 <i class="far fa-heart"></i>
-                <i class="fas fa-heart"></i>
         </div>
         <div class="titre">
             <div class="entrees">
@@ -153,17 +152,21 @@
         <button class="btn">Commander</button>
     </main>
     <section class="footer">
-            <footer class="footer_container">
-              <h3>Ohmyfood</h3>
-              <div class="href1">
-                <a href="ustensils"><i class="fas fa-utensils" aria-hidden="true"></i>Proposer un restaurant</a>
-                <a href="helping"><i class="fas fa-hands-helping" aria-hidden="true"></i>Devenir partenaire</a>
-              </div>
-              <div class="href2">
-                <a href="mentions">Mentions légales</a>
-                <a href="mailto:">Contact</a>
-              </div>
-            </footer>
+        <footer class="footer_container">
+          <h3>Ohmyfood</h3>
+          <div class="href1">
+            <a class="ustensils" href="ustensils">
+              <i class="fas fa-utensils" aria-hidden="true">
+              </i>Proposer un restaurant</a>
+            <a class="help" href="helping">
+              <i class="fas fa-hands-helping" aria-hidden="true">
+              </i>Devenir partenaire</a>
+          </div>
+          <div class="href2">
+            <a class="mentions" href="mentions">Mentions légales</a>
+            <a class="mail" href="mailto:">Contact</a>
+          </div>
+        </footer>
       </section>
 </body>
 </html>
